--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="bg-light">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Ecommerce</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -39,7 +39,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -51,7 +51,7 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Category
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Action</a>
@@ -61,7 +61,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="#">Blog</a>
               </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
